      + --log-destination may be specified multiple times for multiple logs
      + --debugfilesep is now --log-separate
      + --debugname is now --log-extension
      + --cleandebus is now --log-clean
    [David Wheeler]

  - Eliminated 'Use of "goto" to jump into a construct has been deprecated'
    warnings on Perl 5.12 and higher.


Bucardo version 4.4.8, released November 30, 2011

  - Fix incorrect checking of hostname for host_safety_check [GSM]

  - Fix wrong version number in the bucardo_ctl script.


Bucardo version 4.4.7, released November 8, 2011

  - Fix bug when using multi-column primary keys where the first 
    is an int, and the second is not. Reported by Brady S Edwards [GSM]

  - Do not rely on $@ to catch important evals [GSM]


Bucardo version 4.4.6, released July 10, 2011

  - Fix bug resulting in wrong escapes in swap syncs for int4 primary keys
    Reported by Kiriakos Tsourapas. [GSM]


Bucardo version 4.4.5, released June 18, 2011

  - Set SECURITY DEFINER on triggerkick functions. [GSM]


Bucardo version 4.4.4, released May 14, 2011

  - Make sure we escape backslashes when building the 
    DELETE queries for pushdelta syncs [GSM]. Reported 
    by Gabriel Weinberg <yegg@alum.mit.edu>

  - Report correct number of inserts/deletions in 
    bucardo_ctl status [GSM]. Reported by Gabriel 
    Weinberg <yegg@alum.mit.edu>


Bucardo version 4.4.3, released April 15, 2011

  - Fix rare race condition when slave database dies. [GSM]
    Thanks to Kaveh Mousavi Zamani for the report.


Bucardo version 4.4.2, released March 17, 2011

  - Fix incorrect SET TIME ZONE inside the bucardo_delta functions. [GSM]


Bucardo version 4.4.1, released November 9, 2010

 - Set the search_path to prevent bogus warnings on startup about sequence 
   mismatches based on schema names. [GSM] (Bug #17)

 - Fix failing makedelta when using multi-column primary keys. 
   [GSM, reported by Michelle Sullivan]
